Nav bugg fixes on mobile. Cred added

--- a/demos/MicroTuneTraining/plugins/default-style.css
+++ b/demos/MicroTuneTraining/plugins/default-style.css
@@ -12,15 +12,6 @@ body {
 }
 
 
-/*
-Detta här måtten sätter formatet för den aktiva ytan "main"
-till 16:9 med bredden 1000 pixlar */
-main {
-	background-color: white;
-	width: 1000px;
-	height: 562.5px;
-}
-
 
 /* Det här är ett sätt att skapa olika sidor/sections som är gömda från början (opacity: 0)
 	och ligger underst (z-index: -1)
