--- a/demos/MicroTuneTraining/style.css
+++ b/demos/MicroTuneTraining/style.css
@@ -26,18 +26,17 @@ main {
 
 section {
     padding: 0;
-    margin: 0;
     padding-top: 50px;
     background-color: #666;
 }
 
-section a {
+section > a {
     display: inline-block;
     border-radius: 10px;
     text-align: center;
     font-size: 2.5em;
     color: black;
-    height: 9%;
+    height: 8.9%;
     width: 100%;
     margin: 1px -2px;
     padding-top: 0.4em;
@@ -47,15 +46,18 @@ section a {
 
 }
 
-section a:active, section a.selected {
+section > a:active, section > a.selected {
     background-color: aqua;
 }
-section a.black {
+section > a.black {
     background-color: #333;
     color: white;
 }
+section > a.black.selected {
+    background-color: rgb(0, 135, 135);
+}
 
-section a.micro {
+section > a.micro {
     width: 20%;
 }
 
@@ -65,6 +67,7 @@ section#key a {
 }
 
 nav {
+    z-index: 1000;
     display: block;
     background-color: black;
     height: 50px;
@@ -77,10 +80,21 @@ nav a {
     text-align: center;
     padding-top: 0.5em;
     width: 24%;
+    height: 100%;
 }
 
 h2 {
     margin-top: 1em;
     color: white;
     padding: 0.5em;
+}
+
+p {
+    font-size: 1.2em;
+    color: white;
+    padding: 0.5em;
+}
+
+section#mode a {
+    color: white;
 }
